Cwd for mapreduce-yt, mark test as ya:external

--- a/mapreduce/yt/python/test/CMakeLists.txt
+++ b/mapreduce/yt/python/test/CMakeLists.txt
@@ -1,4 +1,5 @@
 OWNER(
+    exprmntr
     vartyukh
 )
 
@@ -9,6 +10,8 @@ END()
 ADD_TEST(
     PY_TEST
         test.py
+    TAG
+        ya:external
     DEPENDS
         mapreduce/yt/python
     TIMEOUT 100
