Work in tmpfs if ram_drive_path test param is set. And some renames. .

--- a/mapreduce/yt/python/CMakeLists.txt
+++ b/mapreduce/yt/python/CMakeLists.txt
@@ -12,7 +12,11 @@ FILES(
     yt_stuff.py
 )
 
-FROM_SANDBOX(FILE 112204044 OUT yt.tgz)
+#IF ()
+    FROM_SANDBOX(FILE 112204044 OUT yt.tgz)
+#ELSEIF()
+#ELSE()
+#ENDIF()
 
 END()
 
