--- a/mapreduce/yt/python/CMakeLists.txt
+++ b/mapreduce/yt/python/CMakeLists.txt
@@ -12,11 +12,13 @@ FILES(
     yt_stuff.py
 )
 
-#IF ()
-    FROM_SANDBOX(FILE 112204044 OUT yt.tgz)
-#ELSEIF()
-#ELSE()
-#ENDIF()
+IF (YT_PRECISE_17_5)
+    # 0.17.5-prestable-without-yt~7966~df46c24
+    FROM_SANDBOX(FILE 116083778 OUT yt.tgz)
+ELSE()
+    # 18.2.19561-prestable-without-yt~a62ea2a
+    FROM_SANDBOX(FILE 116085960 OUT yt.tgz)
+ENDIF()
 
 END()
 
