--- a/mapreduce/yt/python/CMakeLists.txt
+++ b/mapreduce/yt/python/CMakeLists.txt
@@ -13,11 +13,11 @@ FILES(
 )
 
 IF (YT_PRECISE_17_5)
-    # See https://sandbox.yandex-team.ru/task/53800665/view for details.
-    FROM_SANDBOX(FILE 117513621 OUT yt.tar)
+    # See https://sandbox.yandex-team.ru/resource/119849416/view for details.
+    FROM_SANDBOX(FILE 119849416 OUT yt.tar)
 ELSE()
-    # See https://sandbox.yandex-team.ru/task/53800796/view for details.
-    FROM_SANDBOX(FILE 117513795 OUT yt.tar)
+    # See https://sandbox.yandex-team.ru/resource/119849708/view for details.
+    FROM_SANDBOX(FILE 119849708 OUT yt.tar)
 ENDIF()
 
 END()
