Temporary tests with mr_utils. Copied from quality/blender/wizards_clicks and marked as FAT. Needs to exprmntr@ and devtools@-team for FAT-tests work improvement.

--- a/mapreduce/yt/CMakeLists.txt
+++ b/mapreduce/yt/CMakeLists.txt
@@ -7,4 +7,8 @@ RECURSE(
     client
     examples
     python
+
+    # Temp tests for exprmntr@, copied from quality/blender/wizards_clicks.
+    # devtools@ try to stabilize FAT tests work.
+    tmp_tests
 )
