move yson library to proper place YT-4266

--- a/mapreduce/yt/client/CMakeLists.txt
+++ b/mapreduce/yt/client/CMakeLists.txt
@@ -9,10 +9,11 @@ SRCS(
 )
 
 PEERDIR(
-    mapreduce/yt/interface
-    mapreduce/yt/common
-    mapreduce/yt/io
     library/digest/md5
+    library/yson
+    mapreduce/yt/common
+    mapreduce/yt/interface
+    mapreduce/yt/io
 )
 
 END()
