Added initial tests

--- a/mapreduce/yt/CMakeLists.txt
+++ b/mapreduce/yt/CMakeLists.txt
@@ -6,6 +6,7 @@ RECURSE(
     client
     examples
     python
+    tests
     # Temp tests for exprmntr@, copied from quality/blender/wizards_clicks.
     # devtools@ try to stabilize FAT tests work.
     tmp_tests
