Update local yt versions

--- a/mapreduce/yt/python/CMakeLists.txt
+++ b/mapreduce/yt/python/CMakeLists.txt
@@ -17,8 +17,10 @@ IF (YT_PRECISE_17_5)
     FROM_SANDBOX(FILE 122472590 OUT yt.tar)
 ELSEIF (YT_PRECISE_18_2)
     FROM_SANDBOX(FILE 122472776 OUT yt.tar)
+ELSEIF (YT_PRECISE_18_3)
+    FROM_SANDBOX(FILE 126752449 OUT yt.tar)
 ELSE () # Latest version
-    FROM_SANDBOX(FILE 122472776 OUT yt.tar)
+    FROM_SANDBOX(FILE 126752449 OUT yt.tar)
 ENDIF()
 
 PEERDIR(
