Move NMR operations to operations/. Will be useful for creating tests with fails in operations (we should do such ops in different binary).

--- a/mapreduce/yt/tests/common/CMakeLists.txt
+++ b/mapreduce/yt/tests/common/CMakeLists.txt
@@ -11,10 +11,13 @@ SRCS(
 
 PEERDIR(
     mapreduce/yt/tests/lib
+    mapreduce/yt/tests/operations
     mapreduce/yt/tests/util
     mapreduce/lib
 )
 
 END()
 
-RECURSE(test)
+RECURSE(
+    test
+)
