Native protobuf support

--- a/mapreduce/yt/io/CMakeLists.txt
+++ b/mapreduce/yt/io/CMakeLists.txt
@@ -8,12 +8,14 @@ SRCS(
     client_reader.cpp
     client_writer.cpp
     block_writer.cpp
+    lenval_table_reader.cpp
     node_table_reader.cpp
     node_table_writer.cpp
     yamr_table_reader.cpp
     yamr_table_writer.cpp
     proto_table_reader.cpp
     proto_table_writer.cpp
+    proto_helpers.cpp
     file_reader.cpp
     file_writer.cpp
 )
