Update local yt.

--- a/mapreduce/yt/python/CMakeLists.txt
+++ b/mapreduce/yt/python/CMakeLists.txt
@@ -14,11 +14,13 @@ FILES(
 
 # See https://sandbox.yandex-team.ru/resource/RESOURCE_ID/view for details.
 IF (YT_PRECISE_17_5)
-    FROM_SANDBOX(FILE 155264043 OUT yt.tar)
+    FROM_SANDBOX(FILE 159356569 OUT yt.tar)
 ELSEIF (YT_PRECISE_18_4)
     FROM_SANDBOX(FILE 155264326 OUT yt.tar)
+ELSEIF (YT_PRECISE_18_5)
+    FROM_SANDBOX(FILE 159356802 OUT yt.tar)
 ELSE () # Latest version
-    FROM_SANDBOX(FILE 155264326 OUT yt.tar)
+    FROM_SANDBOX(FILE 159356802 OUT yt.tar)
 ENDIF()
 
 PEERDIR(
