Replace PACKAGE with PACKAGE+LIBRARY * PACKAGE contains sandbox resources * LIBRARY contains python code

--- a/mapreduce/yt/python/CMakeLists.txt
+++ b/mapreduce/yt/python/CMakeLists.txt
@@ -3,13 +3,14 @@ OWNER(
     exprmntr
 )
 
-PACKAGE()
+LIBRARY()
 
 BUILD_ONLY_IF(LINUX)
 
-FILES(
+PY_SRCS(
     __init__.py
     yt_stuff.py
+    yt_version.py
 )
 
 CONFIGURE_FILE(
@@ -20,29 +21,16 @@ CONFIGURE_FILE(
 # See https://sandbox.yandex-team.ru/resource/RESOURCE_ID/view for details.
 IF (YT_PRECISE_17_5)
     SET(YT_VERSION 17_5)
-    FROM_SANDBOX(FILE 160396240 OUT yt.tar)
 ELSEIF (YT_PRECISE_18_4)
     SET(YT_VERSION 18_4)
-    FROM_SANDBOX(FILE 155264326 OUT yt.tar)
 ELSEIF (YT_PRECISE_18_5)
     SET(YT_VERSION 18_5)
-    FROM_SANDBOX(FILE 160396487 OUT yt.tar)
 ELSE () # Latest version
     SET(YT_VERSION 18_5)
-    FROM_SANDBOX(FILE 160396487 OUT yt.tar)
-ENDIF()
-
-IF(NOT YT_PRECISE_17_5)
-    PEERDIR(
-        yt/${YT_VERSION}/yt/server
-        yt/${YT_VERSION}/yt/node_modules
-        yt/${YT_VERSION}/yt/nodejs/targets/bin
-        yt/${YT_VERSION}/yt/nodejs/targets/package
-    )
 ENDIF()
 
 PEERDIR(
-    devtools/swag
+    devtools/swag/lib
 )
 
 END()
