move mapreduce/yt/interface/extension.proto into PROTO_LIBRARY mapreduce/yt/interface/protos;

--- a/mapreduce/yt/interface/CMakeLists.txt
+++ b/mapreduce/yt/interface/CMakeLists.txt
@@ -9,12 +9,12 @@ SRCS(
     io.h
     operation.h
     client.h
-    extension.proto
 )
 
 PEERDIR(
     util
     contrib/libs/protobuf
+    mapreduce/yt/interface/protos
 )
 
 END()
