Do not crash on tables that have _format=yamr attribute YT-6120

--- a/mapreduce/yt/tests/common/misc/CMakeLists.txt
+++ b/mapreduce/yt/tests/common/misc/CMakeLists.txt
@@ -8,6 +8,7 @@ OWNER(
 SRCS(
     main.cpp
     test_cypress_manipulations.cpp
+    test_format_attribute.cpp
     test_operations.cpp
     test_table.cpp
     test_update.cpp
