--- a/taxi/dmp/spark/pyspark-stubs/requirements-tests-py3.txt
+++ b/taxi/dmp/spark/pyspark-stubs/requirements-tests-py3.txt
@@ -1,2 +1,5 @@
-mypy>=0.590 
-pyspark>=2.3.0,<2.4.0
+git+https://github.com/python/mypy.git@master
+typed-ast>=1.0.4
+flake8==3.5.0
+flake8-bugbear==18.2.0
+flake8-pyi>=18.3.1
