--- a/taxi/dmp/spark/pyspark-stubs/.travis.yml
+++ b/taxi/dmp/spark/pyspark-stubs/.travis.yml
@@ -2,10 +2,12 @@ sudo: false
 language: python
 cache: pip
 
-matrix:
-  include:
-    - python: "3.6"
-    - python: "3.5"
+dist: xenial
+
+python:
+  - "3.7"
+  - "3.6"
+  - "3.5"
 
 install:
   - pip install .
