Change version to 3.0.0dev0 (#141)

--- a/taxi/dmp/spark/pyspark-stubs/.travis.yml
+++ b/taxi/dmp/spark/pyspark-stubs/.travis.yml
@@ -9,8 +9,10 @@ python:
   - "3.6"
   - "3.5"
 
+before_install:
+  - pip install -r requirements-tests-py3.txt
+
 install:
   - pip install .
-  - pip install -r requirements-tests-py3.txt
 
 script: ./tests/mypy_test.py
