--- a/taxi/dmp/spark/pyspark-stubs/.travis.yml
+++ b/taxi/dmp/spark/pyspark-stubs/.travis.yml
@@ -1,13 +1,8 @@
+dist: xenial
 sudo: false
 language: python
+python: 3.7
 cache: pip
-
-dist: xenial
-
-python:
-  - "3.7"
-  - "3.6"
-  - "3.5"
 
 before_install:
   - pip install -r requirements-tests-py3.txt
