Leverage built-in MyPy tests to validate snippets

--- a/taxi/dmp/spark/pyspark-stubs/.travis.yml
+++ b/taxi/dmp/spark/pyspark-stubs/.travis.yml
@@ -10,4 +10,6 @@ before_install:
 install:
   - pip install .
 
-script: ./tests/mypy_test.py
+script:
+  - ./tests/mypy_test.py
+  - MYPY_TEST_PREFIX=$PWD MYPYPATH=$PWD/third_party/3 pytest
