--- a/taxi/dmp/spark/pyspark-stubs/.travis.yml
+++ b/taxi/dmp/spark/pyspark-stubs/.travis.yml
@@ -2,7 +2,7 @@ dist: xenial
 sudo: false
 language: python
 python: 3.7
-cache: pip
+# cache: pip
 before_install:
 - pip install -r requirements-tests-py3.txt
 install:
