--- a/taxi/dmp/spark/pyspark-stubs/.travis.yml
+++ b/taxi/dmp/spark/pyspark-stubs/.travis.yml
@@ -3,13 +3,19 @@ sudo: false
 language: python
 python: 3.7
 # cache: pip
+env:
+  - SPARK_BRANCH=master
 before_install:
 - pip install -r requirements-tests-py3.txt
+before_script:
+- git clone --depth 1 --branch $SPARK_BRANCH https://github.com/apache/spark.git spark-source
+- for p in $(ls $PWD/test-data/patches/*patch); do git -C spark-source apply $p; done
 install:
 - pip install .
 script:
 - "./tests/mypy_test.py -p 3.6 3.7"
 - MYPY_TEST_PREFIX=$PWD MYPYPATH=$PWD/third_party/3 pytest
+- MYPYPATH=$PWD/third_party/3 mypy spark-source/examples/src/main/python/ml spark-source/examples/src/main/python/sql spark-source/examples/src/main/python/sql/streaming
 deploy:
   provider: pypi
   user: __token__
