Reformat with black (#364)
* Reformat with black

* Add black --check to CI

--- a/taxi/dmp/spark/pyspark-stubs/.travis.yml
+++ b/taxi/dmp/spark/pyspark-stubs/.travis.yml
@@ -16,6 +16,7 @@ script:
 - "./tests/mypy_test.py -p 3.6 3.7"
 - MYPY_TEST_PREFIX=$PWD MYPYPATH=$PWD/third_party/3 pytest
 - MYPYPATH=$PWD/third_party/3 mypy spark-source/examples/src/main/python/ml spark-source/examples/src/main/python/sql spark-source/examples/src/main/python/sql/streaming
+- black --check $PWD/third_party/3/pyspark
 deploy:
   provider: pypi
   user: __token__
